--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Posts#edit</h1>
-<p>Find me in app/views/posts/edit.html.erb</p>
+<%#= form_tag post_path(@post.id), method: 'patch' do %>
+	<%#= text_field_tag 'title', @post.title %>
+	<%#= text_area_tag 'content', @post.content %>
+	<%#= submit_tag 'Submit!' %>
+<%# end %>
+
+<%= form_for @post do |f| %>
+	<%= f.text_field 'title' %>
+	<%= f.text_area 'content' %>
+	<%= f.submit 'Submit!' %>
+<% end %>
